--- a/Public/CSS/Contact Us.css
+++ b/Public/CSS/Contact Us.css
@@ -1,1 +1,63 @@
+ h1, h2 {
+            color: white;
+            padding: 20px;
+          }
+          
+          /*p1{
+            color: white;
+            padding: 30px;
+          } */
+          footer {
+            color: white;
+            background-color: red;
+            text-align: center;
+            /*border: 1px solid black;*/
+            padding: 0px;
+            width: 2000px;
+            height: 70px;
+          }
+          body {
+            margin: 0px;
+            padding: 0px;
+            background-color: black;
+          }
+          .navbar {
+           color: black; 
+           overflow: hidden;
+          background-color: red;
+          }
+          .navbar a:hover {
+            background-color: green;
+            color: red;
+            }
 
+          .navbar a.active {
+            background-color: white;
+            color: green;
+            }
+          .column1 {
+          float: left;
+          width: 31.8%;
+          padding: 0px;
+          }
+          .row1::after {
+          content: "";
+          clear: both;
+          display: table;
+          }
+          .column2{
+          float: left;
+          width: 32%;
+          padding: px;
+          }
+          .row2::after{
+          content: "";
+          clear: both;
+          display: table
+          }
+          p {
+            color: white;
+          }
+          label{
+            color: white;
+          }
