--- a/Public/CSS/Our Team.css
+++ b/Public/CSS/Our Team.css
@@ -1,1 +1,107 @@
+ h1{
+            color: white;
+            padding: 20px;
+          }
+          
+            p5 {
+            color: white;
+            padding: 30px;
+            }
+            
+            p1,p2 {
+            color: black;
+            padding: 30px;
+            }
 
+          
+          footer {
+            color: white;
+            background-color: red;
+            text-align: center;
+            border: 1px solid black;
+            padding: 0px;
+            width: 2000px;
+            height: 70px;
+          }
+
+          body {
+            margin: 0px;
+            padding: 0px;
+            background-color: black;
+          }
+          .navbar {
+           color: black; 
+           overflow: hidden;
+          background-color: red;
+          }
+          .navbar a:hover {
+            background-color: green;
+            color: red;
+            }
+
+          .navbar a.active {
+            background-color: white;
+            color: green;
+            }
+
+          .title {
+            margin-top: 20px;
+          }
+          .carousel-inner{
+            height: auto;
+            
+          }
+         .column2{
+          float: left;
+          width: 32%;
+          padding: 20px;
+          }
+          .row2::after{
+          content: "";
+          clear: both;
+          display: table
+          }
+          /* Three columns side by side */
+          .column {
+            float: left;
+            width: 33.3%;
+            margin-bottom: 16px;
+            padding: 0 8px;
+            }
+          /* Display the columns below each other instead of side by side on small screens */
+          @media screen and (max-width: 650px) {
+          .column {
+            width: 100%;
+            display: block;}
+            }
+          /* Add some shadows to create a card effect */
+          .card {
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+            }   
+          /* Some left and right padding inside the container */
+          .container {
+          padding: 0 16px;
+            }
+          /* Clear floats */
+          .container::after, .row::after {
+          content: "";
+          clear: both;
+          display: table;
+          }
+          .title {
+            color: grey;
+            }
+          .button {
+            border: none;
+           outline: 0;
+          display: inline-block;
+           padding: 8px;
+            color: white;
+            background-color: #000;
+           text-align: center;
+            cursor: pointer;
+            width: 100%;
+            }
+          .button:hover {
+            background-color: #555;
+            }
